# freva-gpt-backend-py

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev-settings.toml  dev.sh  docker-compose.dev.yml  docker-compose.yml  gen_compose.py  litellm_config.yaml  one_call.sh  prod.sh  prometheus.yml  pyproject.toml  tox.ini
.github/workflows/: ci_job.yml
docker/: .dockerignore  Dockerfile  Dockerfile.code  Dockerfile.ollama  Dockerfile.rag  freva.conf  requirements.txt
docker/code-interpreter-server/: Dockerfile  pyproject.toml
docker/code-server/: Dockerfile  pyproject.toml
docker/freva-gpt-backend/: Dockerfile
docker/ollama/: Dockerfile  Dockerfile.dev
docker/rag-server/: Dockerfile  pyproject.toml
docker/web-search-server/: Dockerfile  pyproject.toml
dockerfiles/backend/: Dockerfile
performance_exp/: bench.sh  one_call.sh  run_matrix.sh  summarize.sh  summarize_plot.sh
resources/stableclimgen/: documentation.txt  examples.jsonl
scripts/: check_kernel_env.py  dev_benchmark_script.py  dev_chat.py  dev_script.py  test_kernel_env.py
scripts/performance_exp/: bench.sh  one_call.sh  run_matrix.sh  summarize.sh
src/: app.py  auth.py  logging_setup.py  runtime_checks.py  settings.py
src/api/: chatbot.py  mcp.py  static.py
src/api/chatbot/: __init__.py  availablechatbots.py  deletethread.py  editthread.py  editthreat.py  getthread.py  getuserthreads.py  heartbeat.py  newthread.py  searchthreads.py  setthreadtopic.py  stop.py  streamresponse.py  userfeedback.py
src/core/: auth.py  available_chatbots.py  heartbeat.py  logging_setup.py  prompting.py  runtime_checks.py  settings.py  stream_orchestrator.py  stream_variants.py
src/freva_gpt/: __main__.py  app.py  cli.py  logger.py
src/freva_gpt/api/: mcp.py  static.py
src/freva_gpt/api/chatbot/: __init__.py  availablechatbots.py  deletethread.py  getthread.py  getuserthreads.py  heartbeat.py  searchthreads.py  setthreadtopic.py  stop.py  streamresponse.py
src/freva_gpt/core/: available_chatbots.py  heartbeat.py  logging_setup.py  prompting.py  runtime_checks.py  server_settings.toml  settings.py
src/freva_gpt/prompt_library/baseline/: examples.jsonl  starting_prompt.txt  summary_prompt.txt
src/freva_gpt/prompt_library/ollama/: starting_prompt.txt  summary_prompt.txt
src/freva_gpt/services/: service_factory.py
src/freva_gpt/services/authentication/: authenticator.py  dev_auth.py  full_auth.py
src/freva_gpt/services/mcp/: client.py  mcp_manager.py
src/freva_gpt/services/storage/: disk_storage.py  helpers.py  mongodb_storage.py  thread_storage.py
src/freva_gpt/services/streaming/: active_conversations.py  helpers.py  litellm_client.py  stream_orchestrator.py  stream_variants.py  tool_calls.py
src/freva_gpt/tools/: header_gate.py  server_auth.py  tool_calls.py
src/freva_gpt/tools/code/: helpers.py  server.py
src/freva_gpt/tools/code_interpreter/: server.py
src/freva_gpt/tools/rag/: document_loaders.py  helpers.py  server.py  text_splitters.py
src/prompt_library/baseline/: examples.jsonl  starting_prompt.txt  summary_prompt.txt
src/services/: service_factory.py
src/services/authentication/: authenticator.py  dev_auth.py  full_auth.py
src/services/mcp/: client.py  mcp_manager.py
src/services/models/: litellm_client.py
src/services/storage/: disk_storage.py  helpers.py  mongodb_storage.py  router.py  thread_storage.py
src/services/streaming/: active_conversations.py  heartbeat.py  helpers.py  litellm_client.py  stream_orchestrator.py  stream_variants.py  tool_calls.py
src/tools/: active_requests.py  asgi_wrapper.py  header_gate.py  server_auth.py  tool_calls.py
src/tools/code/: active_requests.py  code_execution.py  helpers.py  kernels.py  safety_check.py  server.py
src/tools/code_interpreter/: server.py
src/tools/rag/: document_loaders.py  header_gate.py  helpers.py  server.py  text_splitters.py
src/tools/web_search/: server.py
test/: conftest.py  test_auth.py  test_prompting.py  test_routes_auth_matrix.py  test_routes_params.py  test_stream_variants.py
tests/: conftest.py  pytest.ini  test_auth.py  test_code_interpreter.py  test_litellm_client.py  test_rag_server.py  test_routes_auth_matrix.py  test_routes_params.py  test_stream_variants.py  test_thread_storage.py
tests/api_integration_tests/: test_auth.py  test_editthread.py  test_getthread.py  test_routes_auth_matrix.py  test_routes_params.py  test_streamresponse.py  test_userfeedback.py
tests/end_to_end_tests/: conftest.py  run_pytest.sh  test_suite.py
tests/full_integration_tests/: test_code_interpreter.py  test_web_search.py
tests/unit_tests/: test_active_requests.py  test_code_server.py  test_litellm_client.py  test_mcp_servers_header_gate.py  test_prompting.py  test_stream_variants.py  test_thread_storage.py
