[project]
name = "freva-gpt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10,<3.12"
dependencies = [
    "anyio>=4.10.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "litellm>=1.76.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "respx>=0.22.0",
    "uvicorn[standard]>=0.35.0",
]
