[project]
name = "freva-gpt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10,<3.12"
dependencies = [
    "anyio>=4.10.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "ipython>=9.6.0",
    "langchain-community>=0.3.31",
    "litellm>=1.76.2",
    "motor>=3.7.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "respx>=0.22.0",
    "uvicorn[standard]>=0.35.0",
    "debugpy>=1.8.0",
    "jq>=1.10.0",
]
